--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,13 @@
     <title>My AngularJS App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="views/menu/menu.css">
     <script src="../lib/angular.js"></script>
     <script src="../lib/angular-ui-router.js"></script>
 
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/constants.js"></script>
+    <script src="app.js"></script>
+    <script src="views/menu/menu.js"></script>
+    <script src="views/rink/rink.js"></script>
 </head>
 <body>
 
